[package]
name = "woof_native"
version = "0.2.0"
edition = "2021"

[lib]
name = "_native_impl"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29", features = ["abi3-py39"] }
zstd = { version = "0.13", features = ["legacy"] }
rayon = "1.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
thiserror = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
